--- a/home.html
+++ b/home.html
@@ -9,25 +9,21 @@
           div.main {
               position: fixed;
               width: 100%;
-              height: 20%;
+              height: 15%;
               background-color: black;
               color: white;
               left: 0px;
-              top: auto;
+              top: 0px;
           }
+        span.main {
+          border-color:gray;
       </style>
   </head>
   <body>
       <h1>Saving The Earth</h1>
       <div class="main">
-          <div left="0%">
-              <a href="#">Home</a>
-          </div>
-          <div left="25%">hi</div>
+        <span><a href="#">Home</a></span>
+        <span>Warning</span>
       </div>
-      <p><br /><br /><br />w<br /><br /><br />wwwwwwwwwwwwwwwwwwwww<br /><br />h<br />f<br />f<br />g</p>
-      <h1>3</h1>
-      <h1>4</h1>
-      <h1>4<br />good<br />yeagh<br />haha<br /><br /><br /><br />ga<br /><br /><br></h1>
   </body>
 </html>
