--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
               top: 0px;
           }
         span.main {
-          border-color:gray;
+          border: gray 1px solid;
       </style>
   </head>
   <body>
