--- a/home.html
+++ b/home.html
@@ -1,30 +1,18 @@
 <html>
-  <head>
-      <title>SJSH SaveEarth</title>
-      <style>
-          a {
-              text-decoration: none;
-              color: white;
-          }
-          div.main {
-              position: fixed;
-              width: 100%;
-              height: 15%;
-              background-color: black;
-              color: white;
-              left: 0px;
-              top: 0px;
-          }
-        span.main {
-          border: gray 1px solid;
-          width: 20%;
-      </style>
-  </head>
-  <body>
-      <h1>Saving The Earth</h1>
-      <div class="main">
-        <span><a href="#">Home</a></span>
-        <span>Warning</span>
-      </div>
-  </body>
+  <head> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" type="text/css" href="home.css"> 
+ </head> 
+ <body> 
+  <ul class="topnav"> 
+   <li><a class="active" href="home.html">Home</a></li> 
+   <li><a href="news.html">News</a></li> 
+   <li><a href="camp.html">Campaigns</a></li> 
+   <li><a href="links.html">Links</a></li> 
+  </ul> 
+    <div style="padding:0 16px;">
+      <h3>이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호를 위해 제작되었습니다.</h3>
+      <p>ㅈㅁ</p>
+    </div> 
+ </body>
 </html>
