--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
    <li><a href="links.html">Links</a></li> 
   </ul> 
     <div style="padding:0 16px;">
-      <h3>이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호를 위해 제작되었습니다.</h3>
-      <p>ㅈㅁ</p>
+      <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
+      <h3 color="darkgray">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</h3>
+      <p></p>
     </div> 
  </body>
 </html>
