--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
    <li><a href="news.html">News</a></li> 
    <li><a href="camp.html">Campaigns</a></li> 
    <li><a href="links.html">Links</a></li> 
-   <li class="right">Save the Earth</li>
+   <li class="right"><a href="#">Save the Earth</a></li>
   </ul> 
     <div style="padding:0 16px;">
       <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
-      <h3 color="darkgray">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</h3>
+      <h3 color="darkgrey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</h3>
       <p></p>
     </div> 
  </body>
