--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
    <li><a href="news.html">News</a></li> 
    <li><a href="camp.html">Campaigns</a></li> 
    <li><a href="links.html">Links</a></li> 
-   <li class="right"><a href="#">Save the Earth</a></li>
+   <li class="right"><a href="#">Save the Earth</a><img src="earth.jfif></li>
   </ul> 
     <div style="padding:0 16px;">
       <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
