--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
    <li><a class="active" href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
-      <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
+      <h3>이 페이지는 관련 웹사이트들을 홍보합니다.</h3>
       <p color="grey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</p>
       <p></p>
     </div> 
