--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
   </ul> 
     <div style="padding:0 16px;">
       <h3>이 페이지는 관련 웹사이트들을 홍보합니다.</h3>
-      <p color="grey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</p>
+      <p color="grey"><a href="https://www.unenvironment.org/">UN environment programme</a></p>
       <p></p>
     </div> 
  </body>
