--- a/camp.html
+++ b/camp.html
@@ -7,7 +7,7 @@
   <ul class="topnav"> 
    <li><a href="home.html">Home</a></li> 
    <li><a href="news.html">News</a></li> 
-   <li><a class="active" href="camp.html">Campaigns</a></li> 
+   <li><a class="active" href="camp.html">What you can do</a></li> 
    <li><a href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
