--- a/home.html
+++ b/home.html
@@ -7,13 +7,30 @@
   <ul class="topnav"> 
    <li><a class="active" href="home.html">Home</a></li> 
    <li><a href="news.html">News</a></li> 
-   <li><a href="camp.html">Campaigns</a></li> 
+   <li><a href="camp.html">What you can do</a></li> 
    <li><a href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
-      <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
-      <p color="grey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</p>
-      <p></p>
+      <h3>소개</h3>
+      <p>
+        이 웹사이트는 지구살리기 프로젝트의 결과물로, 지구살리기 프로젝트 홍보를 위해 제작되었습니다.
+        <br>
+        이 웹사이트는 다음과 같은 구조로 되어 있습니다.
+        <ul>
+          <li>Home</li>
+          <li>News</li>
+          <li>What you can do</li>
+          <li>Links</li>
+        </ul>
+        <br>
+      Home에서는 이 웹사이트에 대한 소개를 하고 있습니다. 웹사이트의 개설 목적, 내용 등을 설명하여 웹사이트에 들어온 사용자들이 이용하기 편하도록 하고 있습니다.
+      <br>
+      News에서는 관련 소식을 전해 주고 있습니다. 지구 온난화, 환경 오염 등 여러 주제의 기사를 링크하였습니다. 당연하지만, 더 많은 기사를 원하신다면 따로 찾아보시는 것을 추천합니다.
+      <br>
+      What you can do에서는 여러분이 지구를 위해 할 수 있는 간단한 일들을 소개하고 있습니다.
+      <br>
+      Links에는 관련 웹사이트를 정리해 두었습니다. 여기 있는 주소 외에도 수많은 관련 웹사이트가 있으니 관심이 있으시다면 따로 찾아보시는 것을 추천합니다.
+      </p>
     </div> 
  </body>
 </html>
