--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
   </ul> 
     <div style="padding:0 16px;">
       <h3>소개</h3>
+      <img src="다운로드.jfif" width="100%">
       <p>
         이 웹사이트는 지구살리기 프로젝트의 결과물로, 지구살리기 프로젝트 홍보를 위해 제작되었습니다.
         <br>
