--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
           <li>Links</li>
         </ul>
         <br><br>
-      Home에서는 이 웹사이트에 대한 소개를 하고 있습니다. <br>웹사이트의 개설 목적, 내용 등을 설명하여 웹사이트에 들어온 사용자들이 이용하기 편하도록 하고 있습니다.
+      Home에서는 이 웹사이트에 대한 소개를 하고 있습니다. 웹사이트의 개설 목적, 내용 등을 설명하여 웹사이트에 들어온 사용자들이 이용하기 편하도록 하고 있습니다.
       <br><br>
       News에서는 관련 소식을 전해 주고 있습니다. 지구 온난화, 환경 오염 등 여러 주제의 기사를 링크하였습니다. 당연하지만, 더 많은 기사를 원하신다면 따로 찾아보시는 것을 추천합니다.
       <br><br>
