--- a/links.html
+++ b/links.html
@@ -2,6 +2,11 @@
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="home.css"> 
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
  </head> 
  <body> 
   <ul class="topnav"> 
@@ -13,15 +18,15 @@
     <div style="padding:0 16px;">
       <h3>아래는 관련 웹사이트입니다. 더욱 자세한 정보를 얻고 싶으시면 들어가 보시기 바랍니다.</h3>
       <p>
-        <a href="https://www.unenvironment.org/" text-decoration="none">UN environment programme</a>
+        <a href="https://www.unenvironment.org/">UN environment programme</a>
         <br><br>
-        <a href="https://climate.nasa.gov/"text-decoration="none">NASA Global Climate Change</a>
+        <a href="https://climate.nasa.gov/">NASA Global Climate Change</a>
         <br><br>
-        <a href="https://www.savetheearth.org/about/" text-decoration="none">SaveTheEarth.org</a>
+        <a href="https://www.savetheearth.org/about/">SaveTheEarth.org</a>
         <br><br>
-        <a href="http://www.atlas.d-waste.com/" text-decoration="none">Waste Atlas</a>
+        <a href="http://www.atlas.d-waste.com/">Waste Atlas</a>
         <br><br>
-        <a href="http://aqicn.org/" text-decoration="none">Real-time Air pollution</a>
+        <a href="http://aqicn.org/">Real-time Air pollution</a>
       </p>
     </div> 
  </body>
