--- a/news.html
+++ b/news.html
@@ -11,9 +11,10 @@
    <li><a href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
-      <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
-      <p color="grey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</p>
-      <p></p>
+      <h3>Global warming</h3>
+      <h3>Global waste</h3>
+      <h3>Global pollution</h3>
+      <iframe width="100%" src="https://www.usatoday.com/story/news/2017/10/20/study-global-pollution-worlds-biggest-killer-and-threat-survival-mankind/783321001/">Failed to load!</iframe>
     </div> 
  </body>
 </html>
