--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
       </div>
       <h3>Global waste</h3>
       <h3>Global pollution</h3>
-      <iframe width="50%" height="70%" src="https://news.joins.com/article/23647199">Failed to load!</iframe>
+      <iframe width="50%" min-width="300px" height="70%" src="https://news.joins.com/article/23647199">Failed to load!</iframe>
     </div> 
  </body>
 </html>
