--- a/news.html
+++ b/news.html
@@ -2,6 +2,12 @@
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="home.css"> 
+    <style>
+      iframe {
+        width: 100%;
+        height: 70%;
+        }
+    </style>
  </head> 
  <body> 
   <ul class="topnav"> 
