--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
       <br><br>
       News에서는 관련 소식을 전해 주고 있습니다. 지구 온난화, 환경 오염 등 여러 주제의 기사를 링크하였습니다. 당연하지만, 더 많은 기사를 원하신다면 따로 찾아보시는 것을 추천합니다.
       <br><br>
-      What you can do에서는 여러분이 지구를 위해 할 수 있는 간단한 일들을 소개하고 있습니다.
+      What you can do에서는 여러분이 지구를 위해 할 수 있는 간단한 일들을 소개하고 있습니다. 간단하면서도 지구에 많은 도움이 되니 따라 주시면 감사하겠습니다.
       <br><br>
       Links에는 관련 웹사이트를 정리해 두었습니다. 여기 있는 주소 외에도 수많은 관련 웹사이트가 있으니 관심이 있으시다면 따로 찾아보시는 것을 추천합니다.
       </p>
