--- a/camp.html
+++ b/camp.html
@@ -11,9 +11,20 @@
    <li><a href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
-      <h3>이 웹사이트를 방문해 주셔서 감사합니다.</h3>
-      <p color="grey">이 웹사이트는 지구살리기 프로젝트의 결과물로, 환경 보호 홍보를 위해 제작되었습니다.</p>
-      <p></p>
+      <ol>
+        <li>물 절약하기</li>
+      <p>
+        <br> 이를 닦으며 물을 끄는 것만으로도 지구에는 큰 도움이 됩니다. 
+        수도꼭지가 새고 있다면, 매일 340L 가량의 물이 낭비되고 있을 수 있습니다. 이것을 고치는 것만으로도 많은 물을 아낄 수 있고, 돈 역시 아낄 수 있습니다.
+        또한, 풀라스틱 용기의 생수 대신에 정수기의 물을 사용한다면 많은 돈을 절약할 수 있고, 플라스틱 쓰레기 또한 줄여 환경에 큰 도움이 됩니다. 
+        일반 수도꼭지 대신 WaterSense 마크가 있는 제품을 사용한다면 1년에 2000리터 가량의 물을 아낄 수 있습니다.<br>
+        <img src="watersense.png" width="500px" height="auto"><br>
+      </p>
+        <li>재활용 실천</li>
+        <p>
+          
+        </p>
+      </ol>
     </div> 
  </body>
 </html>
