--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@
    <li><a class="active" href="links.html">Links</a></li>
   </ul> 
     <div style="padding:0 16px;">
-      <h3>아래는 관련 웹사이트입니다. 더욱 자세한 정보를 얻고 싶으시면 들어가 보시기 바랍니다.</h3>
+      <p>아래는 관련 웹사이트입니다. 더욱 자세한 정보를 얻고 싶으시면 들어가 보시기 바랍니다.</p>
       <p>
         <a href="https://www.unenvironment.org/">UN environment programme</a>
         <br><br>
