--- a/camp.html
+++ b/camp.html
@@ -13,16 +13,22 @@
     <div style="padding:0 16px;">
       <ol>
         <li>물 절약하기</li>
-      <p>
-        <br> 이를 닦으며 물을 끄는 것만으로도 지구에는 큰 도움이 됩니다. 
+        <p>
+        <br> 양치를 할 때 수도꼭지를 잠그는 것만으로도 지구에는 큰 도움이 됩니다. 
         수도꼭지가 새고 있다면, 매일 340L 가량의 물이 낭비되고 있을 수 있습니다. 이것을 고치는 것만으로도 많은 물을 아낄 수 있고, 돈 역시 아낄 수 있습니다.
         또한, 풀라스틱 용기의 생수 대신에 정수기의 물을 사용한다면 많은 돈을 절약할 수 있고, 플라스틱 쓰레기 또한 줄여 환경에 큰 도움이 됩니다. 
-        일반 수도꼭지 대신 WaterSense 마크가 있는 제품을 사용한다면 1년에 2000리터 가량의 물을 아낄 수 있습니다.<br>
-        <img src="watersense.png" width="500px" height="auto"><br>
-      </p>
-        <li>재활용 실천</li>
+        추가로 일반 수도꼭지 대신 WaterSense 마크가 있는 제품을 사용한다면 1년에 2000리터 가량의 물을 아낄 수 있습니다.<br><br>
+        </p>
+        <li>Reduce, Reuse, Recycle</li>
         <p>
-          
+          덜 쓰고, 다시 쓰고, 재활용하자는 의미입니다. 당연하지만, 이를 통해 매우 많은 양의 쓰레기를 줄일 수 있습니다. 
+          많이들 알시다시피 재활용을 하면 많은 자원을 아낄 수 있습니다. 쓰레기를 매립하게 되면 환경의 오염과 자원의 낭비가 일어나지만, 이를 재활용하게 되면 그 역으로 환경을 지키고, 자원을 아낄 수 있게 됩니다.
+          이에 더해, 단순 재활용을 넘어서 쓰레기에 새로운 목적을 부여하는 새활용(Upcycling) 역시 주목받고 있습니다. 우리나라에서도 이 사업을 추진하고 있는데, 대표적인 예로 
+          <a href="http://www.seoulup.or.kr/">서울 새활용플라자</a>가 있습니다.
+        </p>
+        <li>에너지 절약</li>
+        <p>
+          집의 창문에서는 25에서 30% 가량의 열이 손실됩니다. 창문이 오래되고 비효율적이라면, 창문을 가는 것을 고려하는 것이 좋습니다. 이 외에도 LED 사용, 추울 때는 내복을 입는 등 여러 일들을 통해 에너지를 절약하면 지구를 살리는 데에 큰 도움이 될 것입니다.
         </p>
       </ol>
     </div> 
