--- a/news.html
+++ b/news.html
@@ -19,9 +19,9 @@
     <div style="padding:0 16px;">
       <h3>Global warming</h3>
       <iframe src="https://www.sciencetimes.co.kr/?news=%EC%A7%80%EA%B5%AC-%EC%98%A8%EB%82%9C%ED%99%94-%EB%B9%84%EC%83%81-%EC%82%AC%ED%83%9C-%EC%84%A0%ED%8F%AC%ED%95%B4%EC%95%BC-%ED%95%A0%EA%B9%8C&s=%ED%8B%B0%ED%95%91%20%ED%8F%AC%EC%9D%B8%ED%8A%B8"></iframe>
-      <h3>Global waste</h3>
+      <h3>Waste problems</h3>
       <iframe src="https://www.astronomer.rocks/news/articleView.html?idxno=87591">Failed to load!</iframe>
-      <h3>Global pollution</h3>
+      <h3>Pollution</h3>
       <iframe src="https://news.joins.com/article/23647199">Failed to load!</iframe>
     </div> 
  </body>
