--- a/camp.html
+++ b/camp.html
@@ -24,7 +24,7 @@
           덜 쓰고, 다시 쓰고, 재활용하자는 의미입니다. 당연하지만, 이를 통해 매우 많은 양의 쓰레기를 줄일 수 있습니다. 
           많이들 알시다시피 재활용을 하면 많은 자원을 아낄 수 있습니다. 쓰레기를 매립하게 되면 환경의 오염과 자원의 낭비가 일어나지만, 이를 재활용하게 되면 그 역으로 환경을 지키고, 자원을 아낄 수 있게 됩니다.
           이에 더해, 단순 재활용을 넘어서 쓰레기에 새로운 목적을 부여하는 새활용(Upcycling) 역시 주목받고 있습니다. 우리나라에서도 이 사업을 추진하고 있는데, 대표적인 예로 
-          <a href="http://www.seoulup.or.kr/">서울 새활용플라자</a>가 있습니다.
+          <a href="http://www.seoulup.or.kr/">서울 새활용플라자</a>가 있습니다.<br><br>
         </p>
         <li>에너지 절약</li>
         <p>
