--- a/camp.html
+++ b/camp.html
@@ -2,6 +2,11 @@
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="home.css"> 
+    <style>
+      li {
+        font-weight: bold;
+      }
+    </style>
  </head> 
  <body> 
   <ul class="topnav"> 
