--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <div style="padding:0 16px;">
       <h3>소개</h3>
       <p>
-        이 웹사이트는 지구살리기 프로젝트의 결과물로, 지구살리기 프로젝트 홍보를 위해 제작되었습니다.
+        이 웹사이트는 지구살리기 프로젝트의 결과물로, 지구살리기 홍보를 위해 제작되었습니다.
         <br><br>
         이 웹사이트는 다음과 같은 구조로 되어 있습니다.
         <br>
